dnl - Atualizado o metodo de put de ordens
